--- a/o_templates/default/mailing/layout.html.twig
+++ b/o_templates/default/mailing/layout.html.twig
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0;" />
-		<title>Site</title>
+		<title>Orange</title>
 
 		<style type="text/css">
 			body{width: 100%; background-color: #ffffff; margin:0; padding:0; -webkit-font-smoothing: antialiased;mso-margin-top-alt:0px; mso-margin-bottom-alt:0px; mso-padding-alt: 0px 0px 0px 0px;}
