--- a/o_templates/default/mailing/admin_new_user.html.twig
+++ b/o_templates/default/mailing/admin_new_user.html.twig
@@ -18,6 +18,10 @@
 			<td align="left" valign="top" style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative;" class="editor mce-content-body" mc:edit="text-inner" id="mce_5">
 				<table>
 					<tr>
+						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 5px 5px 25px; vertical-align: top;"><b>Campaña:</b></td>
+						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 25px 5px 5px; vertical-align: top;">{{ campaign }}</td>
+					</tr>
+					<tr>
 						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 5px 5px 25px; vertical-align: top;"><b>Nombre:</b></td>
 						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 25px 5px 5px; vertical-align: top;">{{ name }}</td>
 					</tr>
@@ -31,7 +35,7 @@
 					</tr>
 					<tr>
 						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 5px 5px 25px; vertical-align: top;"><b>Mensaje:</b></td>
-						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 25px 5px 5px; vertical-align: top;">{{ comments|nl2br }}</td>
+						<td style="margin: 0; font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative; padding: 5px 25px 5px 5px; vertical-align: top;">{{ message|nl2br }}</td>
 					</tr>
 				</table>
 			</td>
