--- a/o_templates/default/mailing/new_user.html.twig
+++ b/o_templates/default/mailing/new_user.html.twig
@@ -21,8 +21,8 @@
 		</tr>
 		<tr>
 			<td align="left" valign="top" style="font-family: Arial, Helvetica, sans-serif; font-size: 14px; color: rgb(61, 57, 57); font-weight: normal; line-height: 20px; position: relative;" class="editor mce-content-body" mc:edit="text-inner" id="mce_5">
-				<b>Teléfono:</b> <a href="tel:55-5555-5555">55 5555 5555</a><br>
-				<b>Correo electrónico:</b> <a href="mailto:contact@site.com">contact@site.com</a>
+				<b>Celular:</b> <a href="tel:+52-1-55-5555-5555">55 5555 5555</a><br>
+				<b>Correo electrónico:</b> <a href="mailto:test@mail.com">test@mail.com</a>
 			</td>
 		</tr>
 		<tr>
